<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search_recipes"
        android:icon="@drawable/ic_baseline_subject_24"
        android:title="@string/title_searchByRecipes" />

    <item
        android:id="@+id/navigation_search_ingredients"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_SearchByIngredients" />

    <item
        android:id="@+id/navigation_fav_recipes"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_favRecipes" />

</menu>